# codixing

./: .gitignore  .mcp.json  .mcp.json.example  .vercelignore  AGENTS.md  BUSINESS_MODEL.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPETITOR_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  OPEN_SOURCE_STRATEGY.md  PRD.md  README.md  ROADMAP.md  SECURITY.md  audit.toml  benchmark_claude_code.sh  benchmark_claude_session.py  codecov.yml  codex-config.toml.example  codixing-full-review-2026-05-30.md  codixing-review-2026-06-09.md  codixing-review-2026-07-17.md  mcp.json.example
.claude/: settings.json
.claude-plugin/: marketplace.json
.codex/: config.toml  hooks.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
benchmarks/: README.md  agent_benchmark.py  agent_benchmark_large.py  agent_tasks.toml  agent_tasks_hard.toml  agent_tasks_large.toml  agent_tasks_march_replay.toml  benchmark.py  benchmark_embeddings.sh  competitor_benchmark.py  competitor_tools.toml  embed_benchmark.py  large_repo_baseline_ref.txt  large_repo_gate.py  large_repo_results.md  multilang_eval.py  preflight_benchmark.py  queue_v2_benchmark.py  queue_v2_queries.toml  repos.toml  run_benchmark.py  run_external_competitors.sh  run_swe_bench.py  swe_bench_eval.py  swe_bench_tasks.toml  tasks.toml  test_large_repo_gate.py  train_reranker.py
build-support/: provenance.rs
claude-plugin/: README.md
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: daemon_proxy.rs  main.rs
crates/cli/tests/: agent_context_pack_test.rs  build_provenance_test.rs  callers_callees_test.rs  count_flag_test.rs  doctor_test.rs  grep_cli_test.rs  read_only_lock_test.rs  repair_test.rs  update_file_test.rs
crates/core/: Cargo.toml
crates/core/benches/: large_repo_bench.rs  search_bench.rs  vector_bench.rs
crates/core/src/: agentic.rs  complexity.rs  compressed_artifact.rs  config.rs  context_assembly.rs  engine.rs  error.rs  lib.rs  orphans.rs  session.rs  shared_session.rs  temporal.rs  test_mapping.rs  tokenizer.rs
crates/core/src/chunker/: cast.rs  doc.rs  line.rs  mod.rs
crates/core/src/embedder/: mod.rs
crates/core/src/embeddings/: http.rs  mod.rs  onnx.rs  tests.rs
crates/core/src/engine/: concepts.rs  context_assembly.rs  embed_queue.rs  embed_state.rs  embed_stats.rs  examples.rs  files.rs  fingerprint.rs  focus_map.rs  freshness.rs  graph.rs  impact.rs  import.rs  indexing.rs  init.rs  inventory.rs  mod.rs  orphans.rs  pipeline.rs  recency.rs  reformulation.rs  reload.rs  search.rs  semantic.rs  semantic_artifacts.rs  symbol_graph.rs  sync.rs  synonyms.rs  temporal.rs  test_mapping.rs  validation.rs
crates/core/src/federation/: config.rs  discover.rs  mod.rs
crates/core/src/filter_pipeline/: defaults.toml  mod.rs  rule.rs  stages.rs  tee.rs
crates/core/src/formatter/: mod.rs
crates/core/src/graph/: community.rs  cypher_export.rs  extract.rs  extractor.rs  graphml_export.rs  html_export.rs  mod.rs  obsidian_export.rs  pagerank.rs  persistence.rs  repomap.rs  resolver.rs  surprise.rs  types.rs
crates/core/src/index/: hnsw.rs  mmap_vector.rs  mod.rs  pq.rs  schema.rs  simd_distance.rs  tantivy.rs  trigram.rs  vector.rs  windows_retry.rs
crates/core/src/language/: asciidoc.rs  assembly.rs  bash.rs  c.rs  cpp.rs  csharp.rs  doc.rs  dockerfile.rs  go.rs  html.rs  ipynb.rs  java.rs  kotlin.rs  makefile.rs  markdown.rs  matlab.rs  mermaid.rs  mod.rs  openapi.rs  pdf.rs  php.rs  plain.rs  python.rs  rst.rs  ruby.rs  rust.rs  scala.rs  swift.rs  toml_lang.rs  typescript.rs  xml.rs  yaml.rs  zig.rs
crates/core/src/parser/: mod.rs  tree_cache.rs
crates/core/src/persistence/: mod.rs
crates/core/src/reranker/: mod.rs
crates/core/src/retriever/: bm25.rs  http_reranker.rs  hybrid.rs  mmr.rs  mod.rs  reranker.rs  routing.rs  vector.rs
crates/core/src/symbols/: mmap.rs  mod.rs  persistence.rs  writer.rs
crates/core/src/vector/: mod.rs  qdrant.rs
crates/core/src/watcher/: mod.rs
crates/core/tests/: chunker_test.rs  doc_indexing.rs  embed_queue_tests.rs  embedding_eval_test.rs  external_import_test.rs  generational_init_test.rs  git_sync_test.rs  graph_schema_migration_test.rs  graph_test.rs  graph_trait_dispatch_test.rs  grep_trigram_test.rs  hybrid_retrieval.rs  indexing_test.rs  jupyter_indexing.rs  lazy_load_test.rs  onnx_integration.rs  openapi_indexing.rs  operational_retrieval_test.rs  retrieval_quality_test.rs  search_test.rs  sync_progress_test.rs  watcher_test.rs
crates/core/tests/common/: mod.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: main.rs
crates/lsp/tests/: protocol_test.rs
crates/mcp/: Cargo.toml  TOOL_DESCRIPTION_RUBRIC.md  build.rs
crates/mcp/src/: daemon.rs  daemon_windows.rs  jsonrpc.rs  main.rs  progress.rs  protocol.rs  tools.rs
crates/mcp/src/tools/: analysis.rs  common.rs  context.rs  feature_hub.rs  federation.rs  files.rs  focus.rs  freshness.rs  graph.rs  memory.rs  mod.rs  orphans.rs  search.rs  temporal.rs  tests.rs
crates/mcp/tests/: e2e_protocol_test.rs  session_integration.rs  tool_description_rubric.rs
crates/mcp/tool_defs/: analysis.toml  context.toml  context_assembly.toml  feature_hub.toml  federation.toml  files.toml  focus.toml  freshness.toml  graph.toml  impact.toml  import.toml  memory.toml  meta.toml  orphans.toml  search.toml  session.toml  sync.toml  temporal.toml
crates/server/: Cargo.toml
crates/server/assets/: graph_viewer.html
crates/server/src/: config.rs  error.rs  main.rs  state.rs
crates/server/src/routes/: analysis.rs  graph.rs  index.rs  mod.rs  paths.rs  search.rs  symbols.rs
crates/server/tests/: api_test.rs  build_provenance_test.rs
data/: rustqueue.redb
docs/: CNAME  blog-agent-accuracy-2026-03.html  blog-benchmarks-2026-03.html  blog-bm25-beats-vectors.html  blog-doc-indexing-v029.html  blog-mcp-adoption-fix.html  blog-queue-embedding-v2.html  blog-v0.22-perf-reliability.html  blog-v0.43-agent-control-plane.html  blog-v0.44-agent-context-pack.html  blog-v0.47.1-agent-task-to-plan.html  blog.html  docs.html  index.html  install.sh  research-code-understanding-2026-04.md  (+2 more)
npm/: README.md  (+2 more)
(+95 files in other folders)
