[workspace]
members = ["crates/core", "crates/cli", "crates/server", "crates/mcp"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# AST parsing
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"

# Search
tantivy = "0.22"

# Embeddings + vector index
fastembed = "5"
usearch = "2"

# Async runtime & HTTP server
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Graph
petgraph = { version = "0.8", features = ["serde-1"] }

# Token budget
tiktoken-rs = "0.9"

# File watching
notify = "8"

# CLI
clap = { version = "4", features = ["derive"] }

# Concurrency
dashmap = "6"
rayon = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitcode = { version = "0.6", features = ["serde"] }

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex
regex = "1"

# Glob pattern matching
glob = "0.3"

# .gitignore-aware directory walking
ignore = "0.4"

# Testing
tempfile = "3"
