[workspace]
members = ["crates/core", "crates/cli", "crates/mcp", "crates/lsp", "crates/server"]
resolver = "3"

[workspace.package]
version = "0.21.0"
edition = "2024"
license = "LicenseRef-Codixing"
rust-version = "1.85"
repository = "https://github.com/ferax564/codixing"
homepage = "https://codixing.com"

[workspace.dependencies]
# AST parsing
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-scala = "0.24"
tree-sitter-zig = "1.1"
tree-sitter-php = "0.24"
tree-sitter-matlab = "1.3"
tree-sitter-bash = "0.23"

# Search
tantivy = "0.25"

# Embeddings + vector index
fastembed = { version = "5.12", default-features = false, features = ["ort-load-dynamic", "hf-hub-native-tls"] }
# ort / tokenizers / hf-hub / ndarray — direct deps for the Qwen3 ONNX backend.
# Pin ort to the same exact version as fastembed to avoid duplicate runtimes.
ort = { version = "=2.0.0-rc.11", features = ["load-dynamic", "ndarray"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
hf-hub = { version = "0.4", features = ["native-tls"] }
ndarray = "0.17"
usearch = "2"

# Async runtime & HTTP server
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Graph
petgraph = { version = "0.8", features = ["serde-1"] }

# Token budget
tiktoken-rs = "0.9"

# File watching
notify = "8"

# CLI
clap = { version = "4", features = ["derive"] }

# Concurrency
dashmap = "6"
rayon = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitcode = { version = "0.6", features = ["serde"] }

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex
regex = "1"
regex-syntax = "0.8"

# Glob pattern matching
glob = "0.3"

# TOML parsing (federation workspace discovery)
toml = "0.8"

# XML parsing
quick-xml = "0.37"

# .gitignore-aware directory walking
ignore = "0.4"

# LSP protocol
tower-lsp = "0.20"

# Optional Qdrant vector backend (enable with --features qdrant)
qdrant-client = { version = "1", default-features = false, features = ["serde"] }

# Optional RustQueue job queue (enable with --features rustqueue)
rustqueue = { path = "../rustqueue" }

# Memory-mapped I/O
memmap2 = "0.9"

# Testing
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3"
rand = "0.9"

[profile.release]
lto = "thin"
strip = true
