[package]
name = "codixing"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI for Codixing — code retrieval engine for AI agents"

[[bin]]
name = "codixing"
path = "src/main.rs"

[dependencies]
codixing-core = { path = "../core" }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
