[package]
name = "codixing-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core engine for Codixing — AST parsing, indexing, and retrieval"

[features]
## Enable the optional Qdrant vector backend.
## Requires a running Qdrant instance; connection URL via `QDRANT_URL` env var.
qdrant = ["dep:qdrant-client", "dep:tokio"]

## Enable the Qwen3 embedding model (candle backend, CPU-only by default).
##
## Adds `EmbeddingModel::Qwen3SmallEmbedding` (Qwen/Qwen3-Embedding-0.6B, 1024 dims).
## On first use the model weights (~1.2 GB) are downloaded from Hugging Face and
## cached in the fastembed cache directory (~/.cache/huggingface/).
##
## Build with:
##   cargo build --features codixing-core/qwen3
## Run comparison benchmark (requires model download):
##   cargo test --test model_comparison_test --features codixing-core/qwen3 -- --ignored --nocapture
qwen3 = ["fastembed/qwen3", "dep:candle-core"]

[dependencies]
# Optional Qdrant backend
qdrant-client = { workspace = true, optional = true }
# Tokio runtime — only pulled in when the qdrant feature is enabled
tokio = { workspace = true, optional = true }
# candle-core — only pulled in when the qwen3 feature is enabled
candle-core = { workspace = true, optional = true }

tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-kotlin-ng.workspace = true
tree-sitter-scala.workspace = true

petgraph.workspace = true
tantivy.workspace = true
fastembed.workspace = true
usearch.workspace = true
tiktoken-rs.workspace = true
notify.workspace = true
dashmap.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
bitcode.workspace = true
xxhash-rust.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
glob.workspace = true
ignore.workspace = true

[dev-dependencies]
tempfile.workspace = true
