[package]
name = "codixing-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core engine for Codixing — AST parsing, indexing, and retrieval"

[features]
## Enable the optional Qdrant vector backend.
## Requires a running Qdrant instance; connection URL via `QDRANT_URL` env var.
qdrant = ["dep:qdrant-client", "dep:tokio"]

## Enable the Qwen3 embedding model (ONNX Runtime backend — same speed as BGE).
##
## Adds `EmbeddingModel::Qwen3SmallEmbedding` (1024 dims, int8-quantized).
## Uses `onnx-community/Qwen3-Embedding-0.6B-ONNX` (model_int8.onnx, ~380 MB)
## downloaded from Hugging Face on first use and cached by hf-hub.
##
## Build with:
##   cargo build --features codixing-core/qwen3
qwen3 = ["dep:ort-qwen3", "dep:tokenizers-qwen3", "dep:ndarray-qwen3"]

[dependencies]
# Optional Qdrant backend
qdrant-client = { workspace = true, optional = true }
# Tokio runtime — only pulled in when the qdrant feature is enabled
tokio = { workspace = true, optional = true }
# Qwen3 ONNX backend — only pulled in when the qwen3 feature is enabled
ort-qwen3      = { package = "ort",        version = "=2.0.0-rc.11", optional = true, features = ["load-dynamic", "ndarray"] }
tokenizers-qwen3 = { package = "tokenizers", version = "0.22",         optional = true, default-features = false, features = ["onig"] }
ndarray-qwen3  = { package = "ndarray",    version = "0.17",          optional = true }

hf-hub = { workspace = true }

tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-kotlin-ng.workspace = true
tree-sitter-scala.workspace = true

petgraph.workspace = true
tantivy.workspace = true
fastembed.workspace = true
usearch.workspace = true
tiktoken-rs.workspace = true
notify.workspace = true
dashmap.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
bitcode.workspace = true
xxhash-rust.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
glob.workspace = true
ignore.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "search_bench"
harness = false
