[package]
name = "codixing-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core engine for Codixing — AST parsing, indexing, and retrieval"

[features]
default = ["usearch"]

## Enable the usearch HNSW vector backend.
## Requires POSIX mmap (Linux, macOS). Disabled on Windows where a brute-force
## fallback provides the same `VectorIndex` API without native dependencies.
usearch = ["dep:usearch"]

## Enable the optional Qdrant vector backend.
## Requires a running Qdrant instance; connection URL via `QDRANT_URL` env var.
qdrant = ["dep:qdrant-client", "dep:tokio"]

## Enable the Qwen3 embedding model (ONNX Runtime backend — same speed as BGE).
##
## Adds `EmbeddingModel::Qwen3SmallEmbedding` (1024 dims, int8-quantized).
## Uses `onnx-community/Qwen3-Embedding-0.6B-ONNX` (model_int8.onnx, ~380 MB)
## downloaded from Hugging Face on first use and cached by hf-hub.
##
## Build with:
##   cargo build --features codixing-core/qwen3
qwen3 = ["dep:ort-qwen3", "dep:tokenizers-qwen3", "dep:ndarray-qwen3"]

## Enable the RustQueue-backed embedding pipeline.
## Pushes embedding work as batched jobs to an embedded queue with
## crash recovery and retry. Falls back to the sync path on failure.
rustqueue = ["dep:rustqueue", "dep:tokio"]

## Exposes a handful of `__test_*` probe methods on `Engine` for integration
## tests that live outside the crate (e.g. `crates/core/tests/*.rs`). Not part
## of the public semver surface — gate is `cfg(any(test, feature = "internal-testing"))`.
internal-testing = []

[dependencies]
# Optional Qdrant backend
qdrant-client = { workspace = true, optional = true }
# Tokio runtime — pulled in when qdrant or rustqueue features are enabled
tokio = { workspace = true, optional = true }
# RustQueue job queue — pulled in when the rustqueue feature is enabled
rustqueue = { workspace = true, optional = true }
# Qwen3 ONNX backend — only pulled in when the qwen3 feature is enabled
ort-qwen3      = { package = "ort",        version = "=2.0.0-rc.11", optional = true, features = ["load-dynamic", "ndarray"] }
tokenizers-qwen3 = { package = "tokenizers", version = "0.22",         optional = true, default-features = false, features = ["onig"] }
ndarray-qwen3  = { package = "ndarray",    version = "0.17",          optional = true }

hf-hub = { workspace = true }
tokenizers = { workspace = true }

tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-kotlin-ng.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-zig.workspace = true
tree-sitter-php.workspace = true
tree-sitter-matlab.workspace = true
tree-sitter-bash.workspace = true
quick-xml.workspace = true

petgraph.workspace = true
tantivy.workspace = true
fastembed.workspace = true
usearch = { workspace = true, optional = true }
tiktoken-rs.workspace = true
notify.workspace = true
dashmap.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
safetensors.workspace = true
bitcode.workspace = true
xxhash-rust.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
regex-syntax.workspace = true
glob.workspace = true
toml.workspace = true
ignore.workspace = true
memmap2.workspace = true
roaring.workspace = true
half = "2.7.1"
comrak = { version = "0.37", default-features = false }
scraper = "0.22"

[dev-dependencies]
# Enable the test-only `Engine::__test_*` probes for the lazy_load_test
# integration suite without widening the crate's public semver surface.
# `default-features = false` is critical: without it, cargo re-enables the
# `usearch` default feature even when the test run passes
# `--no-default-features` (Windows CI breaks because usearch 2.24 won't
# compile on MSVC).
codixing-core = { path = ".", default-features = false, features = ["internal-testing"] }
tempfile.workspace = true
criterion.workspace = true
serial_test.workspace = true
rand.workspace = true
filetime = "0.2"

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "large_repo_bench"
harness = false

[[bench]]
name = "vector_bench"
harness = false
