[package]
name = "codixing-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "LSP server for Codixing — hover, go-to-definition, references, symbols"

[[bin]]
name = "codixing-lsp"
path = "src/main.rs"

[dependencies]
codixing-core = { path = "../core", default-features = false }
tower-lsp.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

[features]
default = ["usearch"]
usearch = ["codixing-core/usearch"]
