[package]
name = "codeforge-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MCP server for CodeForge — exposes code search and graph tools to AI agents"

[[bin]]
name = "codeforge-mcp"
path = "src/main.rs"

[dependencies]
codeforge-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
