[package]
name = "codixing-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MCP server for Codixing — exposes code search and graph tools to AI agents"

[[bin]]
name = "codixing-mcp"
path = "src/main.rs"

[dependencies]
codixing-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
