[package]
name = "codixing-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "HTTP API server for Codixing — REST endpoints with SSE streaming"

[[bin]]
name = "codixing-server"
path = "src/main.rs"

[dependencies]
codixing-core = { path = "../core" }
axum.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true }
tower-http.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
